--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "weibo-ids",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "id mid convert",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "files": [
+    "package.json",
+    "README.md",
+    "lib/index.js"
+  ],
   "scripts": {
     "prepublish": "coffee -o lib -c src/*.coffee",
     "test": "coffee test.coffee"
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/lusionx/weibo-ids"
+    "url": "https://github.com/lusionx/weibo-ids"
   },
   "keywords": [
     "weibo",
@@ -20,6 +25,6 @@
   "license": "MIT",
   "dependencies": {
     "lodash": "^3.6.0",
-    "number-x": "^0.1.4"
+    "number-x": "^0.1.5"
   }
 }
